<resources>
    <string name="app_name">myApllicationEsdrasAula1</string>
    <string name="sound_1">Sound 1</string>
    <string name="sound_17">Sound 17</string>
    <string name="sound_3">Sound 3</string>
    <string name="sound_4">Sound 4</string>
    <string name="sound_7">Sound 7</string>
    <string name="sound_6">Sound 6</string>
    <string name="sound_5">Sound 5</string>
    <string name="sound_2">Sound 2</string>
    <string name="sound_13">Sound 13</string>
    <string name="sound_15">Sound 15</string>
    <string name="sound_14">Sound 14</string>
    <string name="string_sound_14" />
    <string name="sound_12">Sound 12</string>
    <string name="string_sound_12" />
    <string name="string_string_sound_12" />
    <string name="string_string_string_sound_12" />
    <string name="string_string_string_string_sound_12" />
    <string name="string_string_string_string_string_sound_12" />
    <string name="sound_11">Sound 11</string>
    <string name="string_sound_11" />
    <string name="sound_10">Sound 10</string>
    <string name="string_sound_10" />
    <string name="sound_9">Sound 9</string>
    <string name="string_sound_9" />
    <string name="sound_8">Sound 8</string>
    <string name="string_sound_8" />
    <string name="string_string_sound_8" />
    <string name="sound_16">Sound 16</string>
    <string name="button">Button</string>
    <string name="entrar">Entrar</string>
</resources>
